<resources>
    <string name="app_name">Heads UP!</string>
    <string name="taboo">taboo</string>
    <string name="celeb_name">Celeb Name</string>
    <string name="submit">submit</string>
    <string name="add_celebrity">add celebrity</string>
    <string name="delete_celebrity">Delete Celebrity</string>
    <string name="update_celebrity">update celebrity</string>
    <string name="back">Back</string>
</resources>